- Update to latest release.

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
-  ps2pkm.tar.xz: 26e9d3645c1b87a7d66432241f15bbbaceb840e4
+  ps2pkm.doc.tar.xz: 2d9347c0b4e956acc7c39acf9b151b595677830a
+  ps2pkm.tar.xz: aa843d5f03d53e59a7d9aff674e6f6db7e207083
